# email-workflow-automation-using-crewai

./: README.md  pyproject.toml  requirements.txt
src/agent/: crew.py  database.db  main.py
src/agent/config/: agents.yaml  tasks.yaml
src/agent/tools/: asana_tool.py  db_ops_tool.py  email_ops.py
tests/: db_tests.py
