[project]
name = "agent"
version = "0.1.0"
description = "agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
agent = "agent.main:run"
run_crew = "agent.main:run"
train = "agent.main:train"
replay = "agent.main:replay"
test = "agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
